# rsground

./: .env.example  Cargo.toml  flake.nix
.github/workflows/: pr-preview.yml  web.yml
backend/: Cargo.toml  README.md
backend/runner/: Cargo.toml
backend/runner/tests/: rust_analyzer.rs
backend/src/: http_errors.rs  main.rs  state.rs
backend/src/auth/: github.rs  handlers.rs  jwt.rs  mod.rs
backend/src/models/: document.rs  mod.rs  project.rs  project_access.rs
backend/src/utils/: expect_var.rs  mod.rs
backend/src/ws/: handlers.rs  messages.rs  mod.rs  websocket.rs  ws_ext.rs
backend/tests/: integration_test.rs
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.sass  App.tsx
frontend/src/components/: SelectField.module.sass  Spinner.tsx  TextField.module.sass  TextField.tsx
frontend/src/core/auth/: AuthModal.module.sass  AuthModal.tsx  UserAvatar.tsx  callback.ts  index.ts  service.ts  store.ts
frontend/src/core/colab/: Colab.module.sass  Colab.tsx
frontend/src/core/panels/: CodePanel.module.sass  dockview.sass
frontend/src/core/sidebar/: Sidebar.module.sass  Sidebar.tsx
frontend/src/features/auth/services/: callback.ts  index.ts  login_github.ts  login_guest.ts  logout.ts
frontend/src/features/auth/stores/: auth.ts  auth_modal.ts  index.ts  redirect_url.ts
frontend/src/icons/: ChevronLeft.tsx  Display.tsx  Document.tsx  Menu.tsx  Moon.tsx  Play.tsx  Skull.tsx  SolidUser.tsx  Sun.tsx
frontend/src/styles/: _mixins.sass
frontend/src/utils/: createLocalStoredSignal.ts
(+45 files in other folders)
