[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rsground-runner = { path = "./runner" }

actix = "0.13"
actix-cors = "0.7.1"
actix_error_proc = { version = "1.1.4", features = ["thiserror"] }
actix-web = "4"
chrono = "0.4"
cola = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3"
jsonwebtoken = "8"
log = "0.4"
oauth2 = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.12.15", features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.3", features = ["serde", "v4"] }

# Para los tests de integracion
awc = "3" # Cliente HTTP y WebSocket para Actix
actix-rt = { version = "2.10.0", features = ["macros"] }
futures-util = "0.3"
lazy_static = "1.4"
once_cell = "1.17"
actix-ws = "0.3.0"
