[package]
name = "rsground-runner"
version = "0.1.0"
description = "The runner engine for RsGround"
edition = "2021"
authors = ["Apika Luca"]

[lib]
test = true

[dependencies]
hakoniwa = "1.1.0"
lsp-types = "0.97.0"
os_pipe = "1.2.1"
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
